--- a/static/src/scss/components/_sidebar.scss
+++ b/static/src/scss/components/_sidebar.scss
@@ -1,6 +1,6 @@
 .oh-sidebar {
-  background-color: $brand-color;
-  color: $white;
+  background-color: hsl(0, 0%, 13%);
+  color: hsl(0, 0%, 100%);
   max-width: 230px;
   min-height: 100vh;
   height: 100%;
