--- a/base/templates/base/auth/username_change_form.html
+++ b/base/templates/base/auth/username_change_form.html
@@ -88,7 +88,7 @@
     </form>
   </div>
   <img
-    src={% if white_label_company.icon %}"{{white_label_company.icon.url}}" {% else %} "{% static 'images/ui/auth-logo.png' %}" {% endif %}
-    alt="Horilla"
+    src={% if white_label_company.icon %}"{{white_label_company.icon.url}}" {% else %} "{% static 'images/ui/I-pro-Logo.png' %}" {% endif %}
+    alt="Horilla" style="width: 300px; padding: 5px;"
   />
 </main>
